[package]
name = "filecoin-webapi"
version = "0.1.0"
authors = ["石博文 <sbw@sbw.so>"]
edition = "2018"

[profile.release]
lto = true

[lib]
name = "filecoin_webapi"
path = "src/lib.rs"

[[bin]]
name = "filecoin-webapi"
path = "src/main.rs"

[dependencies]
actix-rt = "*"
actix-web = "^2"
actix-multipart = "*"
futures = "^0.3"
log = "*"
env_logger = "*"
serde = "*"
#serde_derive = "*"
serde_json = "*"
mime = "*"
lazy_static = "*"
libc = "*"

[dependencies.filecoin-proofs-api]
git = "https://github.com/filecoin-project/rust-filecoin-proofs-api.git"
branch = "master"