[package]
name = "filecoin-webapi"
version = "0.1.0"
authors = ["石博文 <sbw@sbw.so>"]
edition = "2018"

[profile.release]
lto = true

[lib]
crate-type = ["rlib"]
name = "filecoin_webapi"
path = "src/lib.rs"
edition = "2018"

[[bin]]
name = "filecoin-webapi"
path = "src/main.rs"

[dependencies]
actix-rt = "*"
actix-web = "^2"
actix-multipart = "*"
futures = "^0.3"
log = "*"
fil_logger = "*"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "*"
mime = "*"
lazy_static = "^1.4"
libc = "*"

[dependencies.filecoin-proofs-api]
git = "https://github.com/filecoin-project/rust-filecoin-proofs-api.git"
branch = "releases/v4.0.0"