[package]
name = "filecoin-webapi"
version = "0.1.0"
authors = ["石博文 <sbw@sbw.so>"]
edition = "2018"

[profile.release]
lto = true

[lib]
crate-type = ["rlib"]
name = "filecoin_webapi"
path = "src/lib.rs"
edition = "2018"

[[bin]]
name = "filecoin-webapi"
path = "src/main.rs"

[dependencies]
actix-rt = "*"
actix-web = "3.3.2"
actix-multipart = "*"
futures = "^0.3"
futures-core = "*"
futures-util = "*"
log = "*"
fil_logger = "*"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "*"
mime = "*"
lazy_static = "^1.4"
libc = "*"
bytes = "*"

filecoin-proofs-api = { path = "../rust-filecoin-proofs-api", default-features = false }


[features]
default = ["pairing"]
pairing = ["filecoin-proofs-api/pairing"]
blst = ["filecoin-proofs-api/blst"]

[patch.crates-io]
merkletree = { path = "../merkletree" }
